H6 bound authored hydrology projection by chunk [skip ci]